fix z-index for SelectField menu

--- a/components/fields/Select/index.module.scss
+++ b/components/fields/Select/index.module.scss
@@ -9,7 +9,7 @@
   outline: none;
   :global{
     .ma-select__menu{
-      z-index: 2;
+      z-index: 3;
       margin-top: -8px;
       box-shadow: none;
       border-radius: 0px 0px 10px 10px;
